# digipres-practice-index

./: .gitignore  Makefile  README.md  dvc.yaml  practice-test.db  pyproject.toml
.dvc/: config
dppi/: fetcher-zotero.py  fetcher.py  graph_gen.py  merger.py  models.py  pubmaker.py  utils.py
releases/: practice-v0.1.0.db  practice-v1.0.0.db  practice.db
sources/ipres/: .gitignore  index.csv
sources/ipres/raw/: ipres2004.phaidra.jsonl  ipres2005.phaidra.jsonl  ipres2006.phaidra.jsonl  ipres2007.phaidra.jsonl  ipres2008.phaidra.jsonl  ipres2009.phaidra.jsonl  ipres2010.phaidra.jsonl  ipres2011.phaidra.jsonl  ipres2012.phaidra.jsonl  ipres2013.phaidra.jsonl  ipres2014.phaidra.jsonl  ipres2015.phaidra.jsonl  ipres2016.phaidra.jsonl  ipres2017.phaidra.jsonl  ipres2018.phaidra.jsonl  ipres2019.phaidra.jsonl  ipres2021.phaidra.jsonl  ipres2022.eventsair-osf-mapping.csv  ipres2022.eventsair.json  ipres2022.eventsair.jsonl  ipres2022.zotero.jsonl  ipres2023.ideals.jsonl  ipres2024.ghent.csv
sources/ipres/raw-by-hand/: iPRES-2022-publications-osf-eventsair-merge.xlsx  iPRES2024-CompleteProgram.xlsx
src/: confmaker.py  fetcher-ideals.py  fetcher.py  graph_gen.py  merger.py  models.py  pubmaker.py
