[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "digipres-practice-index"
authors = [
    {name = "Andrew Jackson", email = "andrew.jackson@dpconline.org"},
]
description = "Tools for building an index of digital preservation practices."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3"}
dependencies = [
    "awindex@git+https://github.com/digipres/awesome-indexes",
    "datasette",
    "Sickle",
    "sqlite-utils",
    "spacy",
    "python-slugify",
    "pyzotero",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["dppi"]

